--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-snap",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "react-snapshot, prep e.t.c",
   "main": "index.js",
   "author": "stereobooster",
   "license": "MIT",
   "dependencies": {
+    "critical": "^0.9.1",
     "express": "^4.16.1",
     "express-history-api-fallback": "^2.2.1",
     "highland": "^2.11.1",
