--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-snap",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "react-snapshot, prep e.t.c",
   "main": "index.js",
   "author": "stereobooster",
   "license": "MIT",
+  "repository": "stereobooster/react-snap.git",
   "dependencies": {
     "express": "^4.16.1",
     "express-history-api-fallback": "^2.2.1",
