--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "react-snap",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "description": "Pre-renders web app into static HTML",
   "main": "index.js",
   "author": "stereobooster",
   "license": "MIT",
   "repository": "stereobooster/react-snap",
-  "engines": { "node": ">= 8.6.0" },
+  "engines": {
+    "node": ">= 8.6.0"
+  },
   "dependencies": {
     "express": "^4.16.1",
     "express-history-api-fallback": "^2.2.1",
     "highland": "^2.11.1",
     "html-minifier": "^3.5.5",
+    "minimalcss": "^0.2.1",
     "mkdirp": "^0.5.1",
     "puppeteer": "^0.11.0",
     "serve-static": "^1.13.1"
