--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prettier": "1.7.3"
   },
   "scripts": {
-    "toc": "yarn run markdown-toc -i Recieps.md",
+    "toc": "yarn run markdown-toc -i Recipes.md",
     "test": "echo \"Error: no test specified\" && exit 1",
     "precommit": "prettier --write {*,src/*}.{js,json,css}"
   },
