--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "sourcemapped-stacktrace-node": "^2.0.4"
   },
   "devDependencies": {
+    "@types/highland": "^2.10.5",
+    "@types/node": "^8.0.46",
+    "@types/puppeteer": "^0.12.0",
     "markdown-toc": "^1.2.0",
     "prettier": "1.7.3"
   },
