--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">= 8.6.0"
   },
   "dependencies": {
+    "clean-css": "^4.1.9",
     "express": "^4.16.1",
     "express-history-api-fallback": "^2.2.1",
     "highland": "^2.11.1",
