--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "html-minifier": "^3.5.5",
     "minimalcss": "^0.3.1",
     "mkdirp": "^0.5.1",
+    "node-fetch": "^1.7.3",
     "puppeteer": "^0.11.0",
     "serve-static": "^1.13.1",
-    "sourcemapped-stacktrace-node": "^2.0.4"
+    "source-map": "^0.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.0.38",
