--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.4.0",
   "description": "Pre-renders web app into static HTML",
   "main": "index.js",
+  "browser": "src/render.js",
   "author": "stereobooster",
   "license": "MIT",
   "repository": "stereobooster/react-snap",
@@ -15,9 +16,10 @@
     "express-history-api-fallback": "^2.2.1",
     "highland": "^2.11.1",
     "html-minifier": "^3.5.5",
+    "jsdom": "^9.4.5",
     "minimalcss": "^0.3.1",
     "mkdirp": "^0.5.1",
-    "puppeteer": "^0.11.0",
+    "node-fetch": "^1.7.3",
     "serve-static": "^1.13.1",
     "sourcemapped-stacktrace-node": "^2.1.5"
   },
@@ -29,18 +31,21 @@
     "@types/node": "^8.0.46",
     "@types/puppeteer": "^0.12.0",
     "@types/serve-static": "^1.13.0",
-    "jsdoc": "^3.5.5",
     "markdown-toc": "^1.2.0",
     "prettier": "1.7.3",
-    "tsd-jsdoc": "^2.0.0-beta.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "typescript": "^2.7.0-dev.20171026"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "scripts": {
     "toc": "yarn run markdown-toc -i Recipes.md",
     "test": "echo \"Error: no test specified\" && exit 1",
     "precommit": "prettier --write {*,src/*}.{js,json,css}",
-    "tsc": "tsc -p .",
-    "ts-definitions": "jsdoc -t node_modules/tsd-jsdoc -r src"
+    "tsc": "tsc -p ."
   },
   "bin": {
     "react-snap": "./run.js"
