--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-snap",
   "version": "1.8.0",
-  "description": "Pre-renders web app into static HTML",
+  "description": "Zero-configuration framework-agnostic static prerendering for SPAs",
   "main": "index.js",
   "author": "stereobooster",
   "license": "MIT",
