--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-snap",
   "version": "1.8.0",
-  "description": "Zero-configuration framework-agnostic static prerendering for SPAs",
+  "description":
+    "Zero-configuration framework-agnostic static prerendering for SPAs",
   "main": "index.js",
   "author": "stereobooster",
   "license": "MIT",
@@ -42,12 +43,7 @@
   "bin": {
     "react-snap": "./run.js"
   },
-  "files": [
-    "index.js",
-    "run.js",
-    "src/",
-    "vendor/"
-  ],
+  "files": ["index.js", "run.js", "src/", "vendor/"],
   "reactSnap": {
     "destination": "tmp",
     "inlineCss": true,
