--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": "stereobooster/react-snap",
   "engines": {
-    "node": ">= 8.6.0"
+    "node": "^8.2.1"
   },
   "dependencies": {
     "clean-css": "^4.1.9",
