Change Renovate config

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "sourcemapped-stacktrace-node": "^2.1.6"
   },
   "devDependencies": {
-    "markdown-toc": "^1.2.0",
-    "prettier": "1.7.5"
+    "markdown-toc": "1.2.0",
+    "prettier": "1.11.1"
   },
   "scripts": {
     "toc": "yarn run markdown-toc -i doc/recipes.md",
