--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-snap",
   "version": "1.12.2",
-  "description": "Zero-configuration framework-agnostic static prerendering for SPAs",
+  "description":
+    "Zero-configuration framework-agnostic static prerendering for SPAs",
   "main": "index.js",
   "author": "stereobooster",
   "license": "MIT",
@@ -25,8 +26,7 @@
     "dev-null-stream": "^0.0.1",
     "jest": "^22.4.3",
     "markdown-toc": "1.2.0",
-    "prettier": "1.12.1",
-    "rewiremock": "^3.7.1"
+    "prettier": "1.12.1"
   },
   "scripts": {
     "toc": "yarn run markdown-toc -i doc/recipes.md",
@@ -36,10 +36,5 @@
   "bin": {
     "react-snap": "./run.js"
   },
-  "files": [
-    "index.js",
-    "run.js",
-    "src/",
-    "vendor/"
-  ]
+  "files": ["index.js", "run.js", "src/", "vendor/"]
 }
