--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "html-minifier": "^3.5.5",
     "minimalcss": "^0.7.5",
     "mkdirp": "^0.5.1",
-    "puppeteer": "^1.2.0",
+    "puppeteer": "1.3.0",
     "serve-static": "^1.13.1",
     "sourcemapped-stacktrace-node": "^2.1.6"
   },
