--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "node": ">= 8.6.0"
   },
   "dependencies": {
-    "clean-css": "^4.1.9",
-    "express": "^4.16.1",
-    "express-history-api-fallback": "^2.2.1",
-    "highland": "^2.11.1",
-    "html-minifier": "^3.5.5",
-    "minimalcss": "^0.7.5",
-    "mkdirp": "^0.5.1",
-    "puppeteer": "^1.2.0",
-    "serve-static": "^1.13.1",
+    "clean-css": "4.1.11",
+    "express": "4.16.3",
+    "express-history-api-fallback": "2.2.1",
+    "highland": "2.13.0",
+    "html-minifier": "3.5.16",
+    "minimalcss": "0.7.6",
+    "mkdirp": "0.5.1",
+    "puppeteer": "^1.4.0",
+    "serve-static": "1.13.2",
     "sourcemapped-stacktrace-node": "2.1.8"
   },
   "devDependencies": {
