--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-snap",
   "version": "1.10.0",
-  "description":
-    "Zero-configuration framework-agnostic static prerendering for SPAs",
+  "description": "Zero-configuration framework-agnostic static prerendering for SPAs",
   "main": "index.js",
   "author": "stereobooster",
   "license": "MIT",
@@ -11,39 +10,37 @@
     "node": ">= 8.6.0"
   },
   "dependencies": {
-    "clean-css": "^4.1.9",
-    "express": "^4.16.1",
-    "express-history-api-fallback": "^2.2.1",
-    "highland": "^2.11.1",
-    "html-minifier": "^3.5.5",
-    "minimalcss": "^0.3.1",
-    "mkdirp": "^0.5.1",
-    "puppeteer": "^0.11.0",
-    "serve-static": "^1.13.1",
-    "sourcemapped-stacktrace-node": "^2.1.6"
+    "clean-css": "4.2.1",
+    "express": "4.16.3",
+    "express-history-api-fallback": "2.2.1",
+    "highland": "2.13.0",
+    "html-minifier": "3.5.19",
+    "minimalcss": "0.5.0",
+    "mkdirp": "0.5.1",
+    "puppeteer": "0.13.0",
+    "serve-static": "1.13.2",
+    "sourcemapped-stacktrace-node": "2.1.8"
   },
   "devDependencies": {
-    "@types/express": "^4.0.38",
-    "@types/highland": "^2.10.5",
-    "@types/html-minifier": "^1.1.30",
-    "@types/mkdirp": "^0.5.1",
-    "@types/node": "^8.0.46",
-    "@types/puppeteer": "^0.12.0",
-    "@types/serve-static": "^1.13.0",
-    "markdown-toc": "^1.2.0",
-    "prettier": "1.7.3",
-    "typescript": "^2.7.0-dev.20171026"
+    "dev-null-stream": "0.0.1",
+    "jest": "23.4.2",
+    "markdown-toc": "1.2.0",
+    "prettier": "1.14.2"
   },
   "scripts": {
     "toc": "yarn run markdown-toc -i doc/recipes.md",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "precommit": "prettier --write {*,src/*}.{js,json,css}",
-    "tsc": "tsc -p ."
+    "test": "jest",
+    "precommit": "prettier --write {*,src/*}.{js,json,css}"
   },
   "bin": {
     "react-snap": "./run.js"
   },
-  "files": ["index.js", "run.js", "src/", "vendor/"],
+  "files": [
+    "index.js",
+    "run.js",
+    "src/",
+    "vendor/"
+  ],
   "reactSnap": {
     "destination": "tmp",
     "inlineCss": true,
