--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean-css": "4.2.1",
     "express": "4.16.4",
     "express-history-api-fallback": "2.2.1",
+    "glob-to-regexp": "^0.4.0",
     "highland": "2.13.3",
     "html-minifier": "3.5.21",
     "minimalcss": "0.8.2",
