--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "node": ">= 8.6.0"
   },
   "dependencies": {
-    "clean-css": "4.2.1",
-    "express": "4.16.4",
-    "express-history-api-fallback": "2.2.1",
-    "highland": "2.13.3",
-    "html-minifier": "3.5.21",
-    "minimalcss": "0.8.2",
-    "mkdirp": "0.5.1",
-    "puppeteer": "^1.8.0",
-    "serve-static": "1.13.2",
-    "sourcemapped-stacktrace-node": "2.1.8"
+    "clean-css": "^4.2.1",
+    "express": "^4.16.4",
+    "express-history-api-fallback": "^2.2.1",
+    "highland": "^2.13.3",
+    "html-minifier": "^3.5.21",
+    "minimalcss": "^0.8.2",
+    "mkdirp": "^0.5.1",
+    "puppeteer": "^1.12.2",
+    "serve-static": "^1.13.2",
+    "sourcemapped-stacktrace-node": "^2.1.8"
   },
   "devDependencies": {
-    "dev-null-stream": "0.0.1",
-    "jest": "24.1.0",
-    "markdown-toc": "1.2.0",
-    "prettier": "1.16.4"
+    "dev-null-stream": "^0.0.1",
+    "jest": "^24.1.0",
+    "markdown-toc": "^1.2.0",
+    "prettier": "^1.16.4"
   },
   "scripts": {
     "toc": "yarn run markdown-toc -i doc/recipes.md",
