--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "react-snap",
   "version": "1.23.0",
   "description": "Zero-configuration framework-agnostic static prerendering for SPAs",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "stereobooster",
   "license": "MIT",
   "repository": "stereobooster/react-snap",
   "engines": {
-    "node": ">= 8.6.0"
+    "node": ">= 12.22.11"
   },
   "dependencies": {
     "clean-css": "4.2.1",
@@ -16,28 +16,37 @@
     "highland": "2.13.4",
     "html-minifier": "4.0.0",
     "minimalcss": "0.8.2",
-    "mkdirp": "0.5.1",
-    "puppeteer": "^1.8.0",
+    "mkdirp": "^1.0.4",
+    "puppeteer": "^13.5.1",
     "serve-static": "1.14.1",
     "sourcemapped-stacktrace-node": "2.1.8"
   },
   "devDependencies": {
+    "@types/clean-css": "^4.2.5",
+    "@types/express": "^4.17.13",
+    "@types/html-minifier-terser": "^6.1.0",
+    "@types/jest": "^27.4.1",
     "dev-null-stream": "0.0.1",
-    "jest": "24.9.0",
+    "jest": "^27.5.1",
     "markdown-toc": "1.2.0",
-    "prettier": "1.18.2"
+    "prettier": "1.18.2",
+    "setimmediate": "^1.0.5",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "toc": "yarn run markdown-toc -i doc/recipes.md",
+    "pretest": "npm run build",
     "test": "jest",
+    "build": "tsc",
     "precommit": "prettier --write {*,src/*}.{js,json,css}"
   },
   "bin": {
-    "react-snap": "./run.js"
+    "react-snap": "dist/run.js"
   },
   "files": [
-    "index.js",
-    "run.js",
+    "src/index.ts",
+    "src/run.ts",
     "src/",
     "vendor/"
   ]
