--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "clean-css": "4.2.1",
     "express": "4.17.1",
     "express-history-api-fallback": "2.2.1",
-    "highland": "2.13.4",
     "html-minifier": "4.0.0",
     "minimalcss": "0.8.2",
     "mkdirp": "^1.0.4",
     "puppeteer": "^13.5.1",
+    "puppeteer-cluster": "^0.23.0",
     "serve-static": "1.14.1",
+    "setimmediate": "^1.0.5",
     "sourcemapped-stacktrace-node": "2.1.8"
   },
   "devDependencies": {
@@ -30,7 +31,6 @@
     "jest": "^27.5.1",
     "markdown-toc": "1.2.0",
     "prettier": "1.18.2",
-    "setimmediate": "^1.0.5",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   },
