--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-snap-typed",
-  "version": "1.26.18",
+  "version": "1.26.19",
   "description": "Zero-configuration framework-agnostic static prerendering for SPAs",
   "main": "dist/index.js",
   "bin": {
@@ -36,6 +36,8 @@
     "mkdirp": "^1.0.4",
     "puppeteer": "^13.5.1",
     "puppeteer-cluster": "^0.23.0",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-block-resources": "^2.4.2",
     "serve-static": "1.14.1",
     "setimmediate": "^1.0.5",
     "shelljs": "^0.8.5",
